--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
 		<style type="text/css">
 
 
-		@font-face {
-		    font-family: 'BenderLight';
-		    src: url('fonts/bender_light-webfont.eot');
-		    src: url('fonts/bender_light-webfont.eot?#iefix') format('embedded-opentype'),
-		         url('fonts/bender_light-webfont.woff') format('woff'),
-		         url('fonts/bender_light-webfont.ttf') format('truetype'),
-		         url('fonts/bender_light-webfont.svg#BenderLight') format('svg');
-		    font-weight: normal;
-		    font-style: normal;
+		/*@font-face {*/
+		/*    font-family: 'BenderLight';*/
+		/*    src: url('fonts/bender_light-webfont.eot');*/
+		/*    src: url('fonts/bender_light-webfont.eot?#iefix') format('embedded-opentype'),*/
+		/*         url('fonts/bender_light-webfont.woff') format('woff'),*/
+		/*         url('fonts/bender_light-webfont.ttf') format('truetype'),*/
+		/*         url('fonts/bender_light-webfont.svg#BenderLight') format('svg');*/
+		/*    font-weight: normal;*/
+		/*    font-style: normal;*/
 
-		}
+		/*}*/
 
 			body {
 				background-color: #000000;
@@ -108,15 +108,11 @@
 		<script src="LandscapeData.js"></script>
 		<script src="InfoDisplay.js"></script>
 		<script src="Lander.js"></script>
-		<!-- requestAnimationFrame shim -->
-		<script src="libs/rAF.js"> </script>
 		<!-- jsfxr audio sound generator -->
 		<script src="libs/audio.js"></script>
 		<script src="libs/jsfx.js"></script>
 		<script src="libs/jsfxlib.js"></script>
 		<script src="Sounds.js"></script>
-		<script src="Sockets.js"></script>
-		<script src="TouchController.js"></script>
 		<script src="game.js"></script>
 	</body>
 
